Exercise from the Array Cast podcast was added to BQN readme.

--- a/programming/bqn/readme.adoc
+++ b/programming/bqn/readme.adoc
@@ -10,14 +10,34 @@ https://mlochbaum.github.io/BQN/
 ====
 . https://mlochbaum.github.io/BQN/doc/quick.html
 . https://mlochbaum.github.io/BQN/doc/index.html[BQN documentation]
+. https://mlochbaum.github.io/BQN/doc/fold.html
 . https://mlochbaum.github.io/bqncrate/
+. https://mlochbaum.github.io/BQN/tutorial/expression.html
+** Compound expressions are evaluated from right to left.
 ====
 
-.Motivational Example
+== Motivation
+
+.Conor's Running Product Exercise
+"But basically you're given an array of numbers. So for instance we'll call it 1 2 3 4 and you want to return another array of numbers which is equal to the product of each of them, but where you have removed one element each time."
+-- https://www.arraycast.com/episode-15-transcript
+
+.Solution
+[%collapsible]
+====
 ----
-# https://mlochbaum.github.io/bqncrate/
-(1⊸»⊸∨' '⊸≠)⊸/d1	Remove duplicate spaces, turning each sequence of spaces into one
+×´⊸÷ 1‿2‿3‿4
+# ⟨ 24 12 8 6 ⟩
 ----
+====
+
+.Remove duplicate spaces, turning each sequence of spaces into one
+----
+(1⊸»⊸∨' '⊸≠)⊸/d1
+----
+-- https://mlochbaum.github.io/bqncrate/
+
+== https://mlochbaum.github.io/BQN/try.html[Try BQN Online]
 
 == https://mlochbaum.github.io/BQN/doc/primitive.html[Primitives]
 
@@ -25,6 +45,8 @@ https://mlochbaum.github.io/BQN/
 |===
 | Glyph | Monadic | Dyadic
 
+| × | Sign | Multiply
+| ÷ | Reciprocal | Divide
 |===
 
 .Modifiers
@@ -32,6 +54,13 @@ https://mlochbaum.github.io/BQN/
 | Glyph | Name(s) | Definition | Description
 
 | ⊸ | Before/Bind | {(𝔽 𝕨 ⊣ 𝕩)𝔾 𝕩} | 𝔾's left argument comes from 𝔽
+|===
+
+.Array traversal and iteration control modifiers
+|===
+| 1-Modifier | Name | 2-Modifier | Name
+
+| ´ | Fold |  | 
 |===
 
 == https://mlochbaum.github.io/BQN/doc/block.html[Blocks]
