--- a/data/enterprise-data-warehouses/readme.adoc
+++ b/data/enterprise-data-warehouses/readme.adoc
@@ -1,22 +1,17 @@
 = Enterprise Data Warehouses
 :keywords: data, database, data-warehouse, data-lake, EDW, business-intelligence, BI
+:hide-uri-scheme:
 :stylesheet: ./../../style.css
 :linkcss:
 :toc:
+:experimental:
 
 .TODO
 [%collapsible]
 ====
-* Term Project first milestone
-** Technical documentation of data sources and processing flow.
-** Create entities model.
-** Create a database model using a CASE tool.
-*** CASE capable of generating the create and insert scripts for PostgreSQL.
-. https://www.hitachivantara.com/en-us/pdf/implementation-guide/three-steps-to-install-pentaho-data-integration-ce.pdf
-.. https://sourceforge.net/projects/pentaho/files/Data%20Integration/6.0/pdi-ce-6.0.0.0-353.zip/download
-.. https://stackoverflow.com/questions/47112412/unrecognized-vm-option-maxpermsize-512m-when-running-zeppelin
-.. https://itslinuxfoss.com/fix-unable-to-locate-package-openjdk-8-jdk
-.. http://www.webupd8.org/p/ubuntu-ppas-by-webupd8.html
+Historization - Slowly changing dimensions
+* Punch through, Kimball type 1, SCD 1
+* Insert, Kimball type 2, SCD 2
 
 .Conceptual Model
 --
@@ -29,9 +24,37 @@
 --
 ====
 
-[source, md]
-----
-include::edw_01.md[]
-----
+include::introduction.adoc[]
 
-include::edw_02.adoc[]
+include::architecture.adoc[]
+
+include::etl-tools.adoc[]
+
+include::pentaho-data-integration.adoc[]
+
+include::visualization-tools.adoc[]
+
+== Glossary
+
+TOGAF:: The Open Group Architecture Framework
+KPI:: Key Performance Indicator
+CRM:: Customer Relationship Management
+ERP:: Enterprise Resource Planning
+SCM:: Supply Chain Management
+EDW:: Enterprise Data Warehouse
+ETL:: Extract, transform, load
+OLAP:: Online analytical, processing
+
+== Term Project
+
+1. You got data and business questions
+2. Reporting
+3. Answer the business questions
+
+=== First Milestone
+
+* Technical documentation of data sources and processing flow.
+* Create entities model.
+* Logical database model
+* Create a database model using a CASE tool.
+** CASE capable of generating the create and insert scripts for PostgreSQL.
